--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -113,7 +113,7 @@
     <dl class="row">
         <dt class="col-md-2">Machine Learning</dt>
         <dd class="col-md-10 mb-3">
-            I studied in a Machine Learning  bootcamp at Datajarlabs, and also have taken an online course of Machine Learning by Andrew Ng from Stanford University. I have been reading and researching papers in the field from various resources. I have done a project on Exploratory Data Analysis and done many assignments regarding model training with Linear Regression and Logistics Regression, and Boosting Algorithms at the bootcamp of Datajarlabs.
+            I studied in a Machine Learning  bootcamp at Datajarlabs, and also have taken an online course of Machine Learning by Andrew Ng from Stanford University. I have been reading research papers in the field from various resources. I have done a project on Exploratory Data Analysis and done many assignments regarding model training with Linear Regression and Logistics Regression, and Boosting Algorithms at the bootcamp of Datajarlabs.
             <a href="https://datajarlabs.com/">Here</a>.
         </dd>
 
@@ -124,7 +124,7 @@
 
         <dt class="col-md-2">C Programming</dt>
         <dd class="col-md-10 mb-3">
-            I have taken a Systems Programming course which also had C programming in it’s  syllabus, which I learned extensively myself apart from the course work. 
+            I have taken a Systems Programming course which also had C programming in its  syllabus, which I learned extensively myself apart from the course work. 
         </dd>
 
         <dt class="col-md-2">Linux and Shell</dt>
@@ -139,7 +139,7 @@
 
         <dt class="col-md-2">Frontend</dt>
         <dd class="col-md-10 mb-3">
-            I have used JavaScript, HTML and CSS on my small and relatively big web application projects, and I consistently learn new tools on this field such as frontend frameworks such as Angular and Vue, with Flutter and Figma to help the design procsess.
+            I have used JavaScript, HTML and CSS on my small and relatively big web application projects, and I consistently learn new tools in this field such as frontend frameworks such as Angular and Vue, with Flutter and Figma to help the design process.
         </dd>
 
         <dt class="col-md-2">Backend</dt>
