--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <p>
-        Extensive knowledge of Data Structures and Algorithms, Object-Oriented Programming and Machine Learning. 2 years of experience and knowledge on Java, C, C#, Python and JavaScript. 2 years of study and experience on Machine Learning and Machine Learning frameworks such as Tensorflow and Keras, I also have several certificates from the Stanford Universities Machine Learning professor Andrew Ng's courses. I'm somewhat experienced in Front-end and Back-end engineering with 2 years of experience, with the usage of several frameworks such as React and MongoDB.
+        Extensive knowledge of Data Structures and Algorithms, Object-Oriented Programming and Machine Learning. 2 years of experience and knowledge on Java, C, C#, Python and JavaScript. 2 years of study and experience on Machine Learning and Machine Learning frameworks such as Tensorflow and Keras, I also have several certificates from the Stanford Universities Machine Learning professor Andrew Ng's courses. I'm somewhat experienced in Front-end and Back-end engineering with 2 years of experience, with the usage of several frameworks such as React and MongoDB. Really interested in building SaaS products and the SaaS ecosystem.
     </p>
 
     <h2>Professional Experience</h2>
