--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <p>
-        Extensive knowledge of Data Structures and Algorithms, Object-Oriented Programming and Machine Learning. 2 years of experience with JavaScript, React, Redux-Saga, SASS and Tailwind, Node.js, Next.js for Fullstack Development and Java, C, C# and Python. 4 years of study and experience on Machine Learning with Tensorflow and Keras, I also have several certificates from the Stanford Universities Machine Learning professor Andrew Ng's courses. I'm experienced in Front-end and Back-end engineering with 2 years of experience, with the usage of several frameworks such as React, Redux-Saga, Next.js, Node.js and MongoDB. Really interested in building SaaS products and the SaaS ecosystem.
+        Extensive knowledge of Data Structures and Algorithms, Object-Oriented Programming and Machine Learning. 1 year of experience with Nextjs and 3 years of experience with JavaScript, React, Redux-Saga, SASS and Tailwind, Node.js for Fullstack Development and Java, C, C# and Python. 4 years of study and experience on Machine Learning with Tensorflow and Keras, I also have several certificates from the Stanford Universities Machine Learning professor Andrew Ng's courses. I'm experienced in Front-end and Back-end engineering with 2 years of experience, with the usage of several frameworks such as React, Redux-Saga, Next.js, Node.js and MongoDB. Really interested in building SaaS products and the SaaS ecosystem.
     </p>
 
     <h2>Professional Experience</h2>
